# ipyreact

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  ipyreact.json  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  release.sh  tsconfig.json  webpack.config.js
.github/: pycafe-create-status.py
.github/workflows/: build.yml  deploy.yml  pycafe.yml
.jupyterlite/: requirements.txt
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: helper.js
examples/: DictUpdateExamples.ipynb  Observe_example.ipynb  children.ipynb  events.ipynb  full_tutorial.ipynb  introduction.ipynb  my_component.tsx  my_style_blue.css  my_style_red.css  prime_example.ipynb  styles_orange.css  use_css_minimal_example.ipynb
examples/antd/: antd-minimal.esm.js  antd-minimal.js  antd.ipynb
examples/threejs-fiber/: threejs-fiber.bundle.js  threejs-fiber.ipynb  threejs-fiber.js
ipyreact/: __init__.py  _frontend.py  _version.py  basic.tsx  cellmagic.py  example.py  importmap.py  module.py  widget.py
ipyreact/nbextension/: extension.js
ipyreact/tests/: conftest.py  test_example.py  test_nbextension_path.py
lab/: jupyter-lite.json
src/: components.tsx  es-module-shims-txt.ts  extension.ts  index.ts  plugin.ts  utils.ts  version.ts  widget.ts  widget.tsx
src/__tests__/: index.spec.ts  utils.ts
tests/ui/: basics_test.py  children_test.py  event_test.py  jupyter_test.py  library_test.py  module_hot_reload_test.py  module_test.py  serialize_test.py
tests/unit/: create_test.py  define_module_test.py
