[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "ipyreact"
dynamic = ["version"]
description = "React for ipywidgets that just works"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Maarten A. Breddels", email = "maartenbreddels@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "anywidget>=0.2.0",
]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
unit-test = [
    "pytest>=6.0",
]
ui-test = [
    "solara[pytest]",
    "pytest>=6.0",
]
dev = [
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/widgetti/ipyreact"

[tool.hatch.version]
path = "ipyreact/_version.py"

[tool.hatch.build]
artifacts = [
    "ipyreact/nbextension/index.*",
    "ipyreact/labextension/*.tgz",
    "ipyreact/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipyreact/nbextension" = "share/jupyter/nbextensions/jupyter-react"
"ipyreact/labextension" = "share/jupyter/labextensions/@widgetti/jupyter-react"
"./install.json" = "share/jupyter/labextensions/@widgetti/jupyter-react/install.json"
"./ipyreact.json" = "etc/jupyter/nbconfig/notebook.d/ipyreact.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipyreact/nbextension/index.js",
    "ipyreact/labextension/package.json",
]
skip-if-exists = [
    "ipyreact/nbextension/index.js",
    "ipyreact/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "ipyreact/_version.py" },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.ruff]
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
]
line-length = 100
select = ["E", "W", "F", "Q", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"docs/source/conf.py" = ["E402"]

